Add styling to Welcome

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,18 @@
-%h2 Hola, that's the placeholder
+#banner
+ .banner_content
+  %h1 File Cabinet
+  %p Your life's work. Organized, always.
+  %button= link_to "Enter", new_user_registration_path
+
+#callouts
+ .callout_inner
+  .wrapper
+   .callout
+    %h2 Organize
+    %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est. Etiam sit amet lectus quis est
+
+#bottom_cta
+ .wrapper
+  %h2 Go Ahead!
+  %br
+  %button= link_to "Join Now", new_user_registration_path
