--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -87,21 +87,21 @@ header {
 			font-family: "Brandon Grotesque","Helvetica Neue", Helvetica, sans-serif;
 			font-size: 2.0rem;
 		}
-		nav {
-			float: right;
-			a {
-				text-decoration: none;
-				color: white;
-				font-size: 1.1rem;
-				line-height: 1.5;
-				margin-left: 1rem;
-				&:hover {
-					color: $light_gray;
-				}
-			}
-		}
-	}
-}
+    nav {
+      float: right;
+	     a {
+	        text-decoration: none;
+          color: white;
+          font-size: 1.1rem;
+          line-height: 1.5;
+          margin-left: 1rem;
+          &:hover {
+					       color: $light_gray;
+				           }
+		    }
+		  }
+	  }
+  }
 
 // FOOTER STYLING (OPTIONAL)
 
@@ -111,7 +111,7 @@ footer {
 	padding: 2rem 0;
 	color: white;
 	text-align: center;
-	@include bold_font;
+	//@include bold_font;
 	p {
 		margin: 0;
 		font-size: .65rem;
